Achieve full JaCoCo coverage