@@ -14,6 +14,7 @@
 		<maven.compiler.release>17</maven.compiler.release>
 		<testcontainers.version>1.21.4</testcontainers.version>
 		<jacoco.version>0.8.13</jacoco.version>
+		<argLine></argLine>
 	</properties>
 
 	<dependencies>
@@ -99,8 +100,22 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+				<configuration>
+					<argLine>@{argLine} --add-opens
+						java.base/java.util=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.22.1</version>
+				<configuration>
+					<argLine>@{argLine} --add-opens
+						java.base/java.util=ALL-UNNAMED</argLine>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
